log.txt
Traceback (most recent call last):
  File "./main_driver.py", line 10, in <module>
    import job_drivers
  File "/home/invictus/Documents/summer_2017_boulder/SRC_EXE_DIR/SOHR/projects/catalytic_cycle/job_drivers.py", line 23
    us.update_terminal_species_setting(file_dir, terminal_spe=terminal_spe))
                                                                           ^
SyntaxError: invalid syntax
